--- a/Auth-Service/.env
+++ b/Auth-Service/.env
@@ -1,4 +1,4 @@
-DB_HOSTNAME = "localhost",
-DB_NAME = "authdatabase",
-DB_USERNAME = "postgres",
+DB_HOST_NAME="localhost"
+DB_NAME ="authdatabase"
+DB_USERNAME = "postgres"
 DB_PASSWORD = "Dance@232166"
